--- a/.github/workflows/hello-world-build.yml
+++ b/.github/workflows/hello-world-build.yml
@@ -10,6 +10,7 @@ on:
     paths: 'hello-world/**'
   pull_request:
     branches: [ main ]
+    paths: 'hello-world/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
