--- a/.github/workflows/hello-world-build.yml
+++ b/.github/workflows/hello-world-build.yml
@@ -6,9 +6,11 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ 'main' ]
+    paths: [ 'hello-world/**' ]
   pull_request:
     branches: [ main ]
+    paths: [ 'hello-world/**' ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
