--- a/.github/workflows/user-api-build.yml
+++ b/.github/workflows/user-api-build.yml
@@ -1,16 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Hello World CI
+name: User API CI
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-    paths: [ 'hello-world/**' ]
+    # paths: [ 'user-api/**' ]
   pull_request:
     branches: [ main ]
-    paths: [ 'hello-world/**' ]
+    paths: [ 'user-api/**' ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,7 +29,5 @@ jobs:
         node-version: 14
     - run: |
         npm ci
-        npm run build
-        npm test
-      name: Build and Test
-      working-directory: ./hello-world
+      name: Build
+      working-directory: ./user-api
