--- a/.github/workflows/user-api-build.yml
+++ b/.github/workflows/user-api-build.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-    # paths: [ 'user-api/**' ]
+    paths: [ 'user-api/**' ]
   pull_request:
     branches: [ main ]
     paths: [ 'user-api/**' ]
