--- a/.github/workflows/hello-world-build.yml
+++ b/.github/workflows/hello-world-build.yml
@@ -7,7 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-    paths: [ 'hello-world/**' ]
+    #branches: [ main ]
+    #paths: [ 'hello-world/**' ]
   pull_request:
     branches: [ main ]
     paths: [ 'hello-world/**' ]
@@ -33,3 +34,15 @@ jobs:
         npm test
       name: Build and Test
       working-directory: ./hello-world
+    
+    # TODO: Plublish artifact and move CD action below to new workflow
+    - name: Deploy to S3
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        SOURCE_DIR: "build"
