--- a/.github/workflows/user-api-build.yml
+++ b/.github/workflows/user-api-build.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build and Test
+    name: Build
     steps:
     - uses: actions/checkout@v2
       name: Check out repository
