--- a/user-api/package.json
+++ b/user-api/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
+    "apollo-server": "^3.4.0",
+    "apollo-server-lambda": "^3.4.0",
     "graphql": "^15.6.1",
     "lodash": "^4.17.21"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  },
   "scripts": {
+    "dev": "nodemon local.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
