--- a/user-api/package.json
+++ b/user-api/package.json
@@ -1,22 +1,31 @@
 {
   "name": "user-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "apollo-server": "^3.4.0",
-    "apollo-server-lambda": "^3.4.0",
-    "graphql": "^15.6.1",
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
+  "version": "0.1.0",
+  "bin": {
+    "user-api": "bin/user-api.js"
   },
   "scripts": {
-    "dev": "nodemon local.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@aws-cdk/assert": "1.129.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "10.17.27",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
+    "aws-cdk": "1.129.0",
+    "ts-node": "^9.0.0",
+    "typescript": "~3.9.7"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-apigatewayv2": "^1.129.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.129.0",
+    "@aws-cdk/aws-appsync": "^1.129.0",
+    "@aws-cdk/aws-lambda": "^1.129.0",
+    "@aws-cdk/core": "1.129.0",
+    "source-map-support": "^0.5.16"
+  }
 }
